refactor InputUtils